--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
  
       - name: Run C++ Test
         shell: bash -l {0}
-        run: ctest. --output-on-failure
+        run: ctest --test-dir . --output-on-failure
         working-directory: build
 
       - name: Run Python Test
