Enable jupyter notebook for debug

--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@ name: xeus-haskell
 channels:
   - conda-forge
 dependencies:
-  - xeus-haskell=0.1.0
+  # - xeus-haskell=0.1.0
   - notebook
   - ipywidgets>=7.6
   - jupyterlab=3
