--- a/pixi.toml
+++ b/pixi.toml
@@ -76,6 +76,8 @@ emcmake cmake
   -DCMAKE_INSTALL_PREFIX="$PREFIX"
   -DCMAKE_PREFIX_PATH="$PREFIX"
   -DCMAKE_FIND_ROOT_PATH_MODE_PACKAGE=ON
+  -DCMAKE_C_FLAGS=""
+  -DCMAKE_CXX_FLAGS=""
   -DCMAKE_EXE_LINKER_FLAGS=""
   -DCMAKE_SHARED_LINKER_FLAGS=""
   -DCMAKE_SYSTEM_NAME=Emscripten
