--- a/share/jupyter/kernels/xhaskell/kernel.json.in
+++ b/share/jupyter/kernels/xhaskell/kernel.json.in
@@ -6,6 +6,10 @@
       "{connection_file}"
   ],
   "language": "haskell",
-  "metadata": {"debugger": false
+  "metadata": {
+    "debugger": false
+  },
+  "env": {
+    "MHSDIR": "@CMAKE_INSTALL_PREFIX@/share/microhs"
   }
 }
