--- a/pixi.toml
+++ b/pixi.toml
@@ -72,7 +72,7 @@ cd "$CONDA_PREFIX/__clobbers__/emscripten_emscripten-wasm32/bin" &&
 sh -c 'find . -type l -exec ln -sf ../../../opt/emsdk/upstream/bin/{} {} \\;'
 """
 prebuild = """
-export PREFIX="$CONDA_PREFIX/../wasm-host";
+export PREFIX=`realpath $CONDA_PREFIX/../wasm-host`;
 emcmake cmake
   -S $PWD
   -B wasm-build
@@ -89,21 +89,30 @@ emcmake cmake
 build = "emmake make -C wasm-build"
 install = "emmake make -C wasm-build install"
 serve = """
-export MHSDIR=$PWD/wasm-build/microhs/src/MicroHsProject;
-export PREFIX="$CONDA_PREFIX/../wasm-host";
+export PREFIX=`realpath $CONDA_PREFIX/../wasm-host`;
+export MHSDIR="$PREFIX/share/microhs";
 jupyter lite serve
   --XeusAddon.prefix="$PREFIX"
-  --XeusAddon.mounts="$MHSDIR:$MHSDIR"
+  --XeusAddon.mounts="$MHSDIR:/share/microhs"
   --contents notebooks/introduction_to_haskell.ipynb
 """
 generate = """
-export MHSDIR=$PWD/wasm-build/microhs/src/MicroHsProject;
-export PREFIX=$CONDA_PREFIX/../wasm-host;
+export PREFIX=`realpath $CONDA_PREFIX/../wasm-host`;
+export MHSDIR="$PREFIX/share/microhs";
 jupyter lite build
-  --XeusAddon.prefix=$PREFIX
-  --XeusAddon.mounts=$MHSDIR:$MHSDIR
+  --XeusAddon.prefix="$PREFIX"
+  --XeusAddon.mounts="$MHSDIR:/share/microhs"
   --contents notebooks/introduction_to_haskell.ipynb
   --output-dir dist
+"""
+debug = """
+rm -rf wasm-build;
+pixi install -e wasm-host;
+pixi run -e wasm-build prebuild;
+pixi run -e wasm-build build;
+pixi run -e wasm-build install;
+pixi run -e wasm-build fix-emscripten-links;
+pixi run -e wasm-build serve;
 """
 
 #
